Remove newly-added notification correctly in the message center

BUG=670060
TEST=manual tested

Review-Url: https://codereview.chromium.org/2544533005
Cr-Commit-Position: refs/heads/master@{#436641}

Former-commit-id: 6aea3f6ecd4f2ced5ffdf88196ccb59e469723aa